--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
     "react-router-dom": "^7.9.4",
     "three": "^0.180.0"
   },
+  "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "deploy": "gh-pages -d dist"
+}
+,
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.16",
